Home page changed

--- a/blogs/inddex.html
+++ b/blogs/inddex.html
@@ -1,17 +1,9 @@
 <!DOCTYPE  html>
 <html>
+  <head>
+    <title>Full Stack Bootcamp</title>
+  </head>
   <body>
-    <article>
-      <h2>The new blog post</h2>
-      <p>This is the description</p>
-    </article>
-    <article>
-      <h2>The new blog post2</h2>
-      <p>This is the description</p>
-    </article>
-    <article>
-      <h2>The new blog post3</h2>
-      <p>This is the description</p>
-    </article>
+    <h1>Home Page Changed</h1>
   </body>
 </html>
